Fix spacing issues with `h4` and refactor `pre`

--- a/assets/css/jekyll-theme-chirpy.scss
+++ b/assets/css/jekyll-theme-chirpy.scss
@@ -50,12 +50,7 @@
   border: 1px solid var(--btn-border-color);
   border-top: none;
   
-  p {
+  p, pre, h4 {
     margin: 0;
-  }
-
-  pre {
-    margin-top: 0;
-    margin-bottom: 0;
   }
 }
